# pybind11_example

./: pyproject.toml  setup.py
src/example/: cython.pyx  pybind.cc
