[build-system]
requires = ["setuptools", "cython>=3.0.0", "numpy", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "Example"
version = "1.2"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["example*"]  # package names should match these glob patterns (["*"] by default)

[tool.ruff]
exclude = [
    ".git",
	".github",
	"__pycache__",
	"build",
	"dist",
	"venv",
	".flake8",
]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Checks to ignore or add
ignore = ["E741"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
